使用 Colaboratory 建立

--- a/0327.ipynb
+++ b/0327.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPRJZPWlRW7BOwGtBvM/jlC",
+      "authorship_tag": "ABX9TyNQz/E0lWWuLmxf4E73h8f6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -351,22 +351,56 @@
     {
       "cell_type": "code",
       "source": [
-        "面積 = print((上底 + 下底)*高//2)"
+        "面積 = (上底 + 下底)*高/2"
+      ],
+      "metadata": {
+        "id": "Mo75CG8gAqyM"
+      },
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(面積)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Mo75CG8gAqyM",
-        "outputId": "98a4680b-8175-49f5-ec2f-7dd3241ebeb4"
+        "id": "-MG8Ch4IEsbT",
+        "outputId": "ffc246fc-93c6-4741-9590-2529a83c2cf6"
       },
-      "execution_count": 27,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "10\n"
+            "10.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"上底長度為:\",上底,\"下底長度為:\",下底,\"高度度為:\",高,\"梯形面積為:\",面積) "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Mf1b4xy3CPEY",
+        "outputId": "e84b0dc0-fce8-4d12-c4f6-f26a5286b215"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "上底長度為: 3 下底長度為: 4 高度度為: 3 梯形面積為: 10.5\n"
           ]
         }
       ]
